--- a/homepage.css
+++ b/homepage.css
@@ -1,11 +1,26 @@
+/* Section margins */
+main > section {
+	margin: 60px 0;
+}
+
+@media only screen and (min-width: 992px) {
+	main > section {
+		margin: 140px 0;
+	}
+}
+
 nav {
 	display: flex;
 	justify-content: center;
 	margin-bottom: 30px;
 }
 
-nav img {
+nav a {
 	width: 40%;
+}
+
+nav img {
+	width: 100%;
 }
 
 header.main-header {
@@ -25,14 +40,46 @@ header.main-header {
 	margin-bottom: 240px;
 	font-size: 37px;
 	font-weight: normal;
+	height: 550px;
+}
+
+.nav-logos {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+@media only screen and (min-width: 992px) {
+	.nav-logos {
+		margin: 0 70px;
+	}
+	.hero-heading {
+		font-size: 120px;
+		line-height: 140px;
+		margin-bottom: 0px;
+	}
+	nav {
+		align-self: center;
+	}
+	nav a {
+		width: auto;
+		height: 50px;
+	}
+	nav img {
+		width: auto;
+		height: 50px;
+	}
+	header.main-header {
+		background-position: 50% 13%;
+		background-size: 100%;
+		height: 80vh;
+		align-items: flex-start;
+		padding: 50px 165px;
+	}
 }
 
 .blue-text {
 	color: var(--accent-text);
-}
-
-.about {
-	margin-top: 30px;
 }
 
 .about h1 {
@@ -79,8 +126,37 @@ header.main-header {
 .about .content p {
 	margin-bottom: 25px;
 }
+
 .recipes-button {
 	width: 100%;
+}
+
+@media only screen and (min-width: 992px) {
+	.about .section-image {
+		width: 50%;
+	}
+	.about .main {
+		display: flex;
+		flex-direction: row-reverse;
+		align-items: center;
+		justify-content: space-between;
+	}
+	.about .content {
+		align-items: flex-start;
+	}
+	.about .content p {
+		font-size: 24px;
+	}
+	.about .info {
+		max-width: 500px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+	.recipes-button {
+		align-self: flex-start;
+	}
 }
 
 .recipes {
@@ -124,6 +200,37 @@ header.main-header {
 	margin-left: auto;
 }
 
+@media only screen and (min-width: 992px) {
+	.recipes h1 {
+		margin: 60px 0;
+	}
+	.recipes-content {
+		display: flex;
+		margin: -20px;
+	}
+	.recipe.featured {
+		margin: 20px;
+		width: 61%;
+	}
+	.secondary-recipes {
+		margin: 20px;
+		width: 39%;
+		display: flex;
+		flex-direction: column;
+	}
+	.secondary-recipes .recipe-text {
+		top: 17%;
+	}
+	.recipe.featured .recipe-text {
+		top: 56%;
+		padding: 0 88px;
+	}
+	.recipe-text h2 {
+		margin-bottom: 90px;
+		font-size: 38px;
+	}
+}
+
 .dots {
 	text-align: center;
 }
@@ -146,6 +253,9 @@ header.main-header {
 .deal {
 	position: relative;
 	margin-bottom: 100px;
+	background-color: var(--main-light);
+	color: var(--main-color);
+	padding: 80px 0px;
 }
 .wave {
 	position: absolute;
@@ -156,12 +266,6 @@ header.main-header {
 }
 .bottom-wave {
 	bottom: -1px;
-}
-
-.deal {
-	background-color: var(--main-light);
-	color: var(--main-color);
-	padding: 80px 0px;
 }
 
 .content {
@@ -216,8 +320,9 @@ header.main-header {
 	justify-content: center;
 	margin-top: 20px;
 }
-.text-content p:first-child {
-	font-size: 20px;
+.deal-text {
+	font-size: 24px;
+	margin: 25px 0;
 }
 .text-content > * {
 	margin: 15px 0;
@@ -228,6 +333,88 @@ header.main-header {
 .time-text {
 	font-size: 80px;
 	font-weight: bold;
+}
+.snowflake {
+	display: none;
+}
+
+@media only screen and (min-width: 992px) {
+	.snowflake {
+		position: absolute;
+		display: block;
+	}
+	.big {
+		width: 150px;
+		height: 150px;
+		top: 27%;
+		left: 79%;
+	}
+	.medium {
+		width: 110px;
+		height: 110px;
+		top: 56%;
+		left: 14%;
+	}
+	.medium-2 {
+		width: 110px;
+		height: 110px;
+		top: 50%;
+		left: 74%;
+	}
+	.small {
+		width: 60px;
+		height: 60px;
+		top: 24%;
+		left: 16%;
+	}
+	.very-small {
+		width: 20px;
+		height: 20px;
+		top: 80%;
+		left: 80%;
+	}
+	.text-content p:first-child {
+		font-size: 40px;
+	}
+	.expires-text {
+		font-size: 65px;
+	}
+	.time-text {
+		font-size: 188px;
+	}
+	.deal .content {
+		padding: 320px 165px;
+	}
+	.deal .content h1 {
+		font-size: 65px;
+		margin-bottom: 80px;
+	}
+	.flex {
+		display: flex;
+	}
+	.deal-contents {
+		position: absolute;
+		top: 33%;
+		left: 12%;
+		width: 23%;
+	}
+	.smirnoff-box img {
+		width: 50%;
+	}
+	.pickwick-box img {
+		width: 50%;
+		position: relative;
+		left: 68px;
+	}
+	.text-btn {
+		text-align: center;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		max-width: 450px;
+		margin-bottom: 80px;
+	}
 }
 
 footer {
@@ -252,9 +439,6 @@ footer .logo {
 	width: 100%;
 }
 
-footer .contacts {
-}
-
 footer .social-media {
 	width: 200px;
 	margin: 20px auto;
@@ -271,4 +455,26 @@ footer .social-media img {
 footer .sources {
 	color: var(--off-text);
 	text-align: center;
+}
+
+@media only screen and (min-width: 992px) {
+	footer {
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+	}
+
+	footer > * {
+		margin: 0 40px;
+		align-items: center;
+		justify-content: center;
+	}
+
+	footer .sources {
+		font-size: 18px;
+		display: flex;
+	}
+	footer .sources > * {
+		margin: 0 10px;
+	}
 }
