--- a/homepage.css
+++ b/homepage.css
@@ -418,8 +418,8 @@ header.main-header {
 }
 
 footer {
-	background-color: var(--main-light);
-	color: var(--main-color);
+	background-color: var(--main-color);
+	color: var(--main-light);
 	font-size: 21px;
 	display: flex;
 	flex-direction: column;
@@ -431,8 +431,12 @@ footer > * {
 	justify-content: center;
 }
 
+footer p {
+	font-size: 16px;
+}
+
 footer a {
-	color: var(--main-color);
+	color: var(--main-light);
 }
 
 footer .logo {
